--- a/lib/config.json
+++ b/lib/config.json
@@ -1,16 +1,16 @@
 {
   "thumb": "https://telegra.ph/file/f9b2ed3ff30d538f086ae.jpg",
-  "namebot": "Senkuu",
-  "botNumber": "6283823742094@s.whatsapp.net",
-  "owner": ["6281312960392@s.whatsapp.net"],
-  "instagram": "https://instagram.com/repannthisori021_",
+  "namebot": "Gilzz-Md",
+  "botNumber": "6285857537269@s.whatsapp.net",
+  "owner": ["6285857537269@s.whatsapp.net"],
+  "instagram": "https://instagram.com/agilzoconnor",
   "author": "Yntkts",
   "session": "senku-md",
   "email": "yntkts@gmail.com",
   "self": false,
   "limit": { "limitUser": 30, "gameLimitUser": 10, "gameLimitPremium": 30 },
   "packInfo":{
-    "packname": "Senkuu",
+    "packname": "Gilzz",
     "author": "Beta ✓"
   },
   "ignore": {
